prevent window from shrinking things too much

--- a/static/HurricaneExchange/css/dashboard.css
+++ b/static/HurricaneExchange/css/dashboard.css
@@ -61,6 +61,10 @@ main {
   font-size: .775rem;
 }
 
+.wrapper {
+  min-width:1300px
+}
+
 
 .scroll {
     max-height: 350px;
